@@ -38,6 +38,7 @@ Version 0.6.0~dev
 	* Support decoding/encoding threads count selection in ffmpeg worker.
 	* Support channel merging/splitting in ffmpeg worker.
 	* Support MXF/D10 mapping in ffmpeg worker.
+	* Force stereo layout for mpegps format.
 
 Version 0.5.0 Released on 2012/03/29
 
